<resources>
    <string name="app_name">NeighBour\'s Chef</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="facebook_app_id">349410092108752</string>
    <string name="fb_login_protocol_scheme">fb1832756210295590</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBsmvVVXBT1Gk_gC3uObsSPSZwZXwMPwp0</string>
    <string name="title_activity_maps">Map</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_activity_test_maps">Map</string>
    <string name="back">Back</string>

    <string name="set_price">\u20b9 %s</string>
    <string name="set_items">%d %s</string>
    <string name="title_cart">Cart</string>
    <string name="action_logout">Log Out</string>
    <string name="sign_in">Sign In</string>

    <string name="food_description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nascetur ridiculus mus mauris vitae ultricies leo integer.</string>
    <string name="title_profile">Profile</string>
    <string name="title_help">Help</string>
    <string name="title_checkout">Checkout</string>
    <string name="phone_number">Phone Number</string>
    <string name="empty_address">Add an address to enjoy delicious food</string>
    <string name="name">Name</string>
    <string name="flat">Flat #</string>
    <string name="building">Building</string>
    <string name="street">Street</string>
    <string name="locality">Locality</string>
    <string name="city">City</string>
    <string name="pin_code">Pin Code</string>
    <string name="landmark">Landmark</string>
    <string name="done">Done</string>
    <string name="title_home">Home</string>
    <string name="title_address">Address</string>
    <string name="call_us">Call US @ %s</string>
    <string name="email_us">Email Us @ %s</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="communicate">Communicate</string>
    <string name="title_orders">Orders</string>
    <string name="empty_orders">See your past orders here!</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_settings">Settings</string>
    <string name="pref_account">account</string>
    <string name="no_user">Not logged in</string>
    <string name="pref_theme">theme</string>
    <string name="settings_theme">Theme</string>
    <string name="delete_account">Delete Account</string>
    <string name="comments">Comments</string>
    <string name="empty_menu">New food items will be added soon!</string>
    <string name="for_date">Available %s</string>
    <string name="empty_phone">Provide your phone number</string>
    <string name="order">Order #: %s</string>
    <string name="set_status">Status: %s</string>
    <string name="empty_cart">Oops! Your cart is empty!</string>

    <plurals name="items">
        <item quantity="one">Item</item>
        <item quantity="other">Items"</item>
    </plurals>
</resources>
