<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/menu_profile"
            android:title="@string/title_profile" />
<!--        <item-->
<!--            android:id="@+id/nav_history"-->
<!--            android:icon="@drawable/menu_history"-->
<!--            android:title="History" />-->
<!--        <item-->
<!--            android:id="@+id/nav_track"-->
<!--            android:icon="@drawable/menu_track"-->
<!--            android:title="Track" />-->
<!--        <item-->
<!--            android:id="@+id/nav_addr"-->
<!--            android:icon="@drawable/menu_addr"-->
<!--            android:title="Location" />-->
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/menu_help"
                android:title="@string/title_help" />
<!--            <item-->
<!--                android:id="@+id/nav_rate"-->
<!--                android:icon="@drawable/menu_rate"-->
<!--                android:title="Rate" />-->

        </menu>
    </item>

</menu>
