<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_address"
            android:gravity="center_horizontal"
            android:textColor="@color/colorOnSurface"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_address_flat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/flat">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_address_flat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text|textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_address_building"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/building">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_address_building"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text|textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_address_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/street">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_address_street"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text|textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_address_locality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/locality">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_address_locality"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text|textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_address_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/city">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_address_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text|textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_address_pin_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/pin_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_address_pin_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_address_landmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/landmark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_address_landmark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text|textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/done"/>

    </LinearLayout>

</ScrollView>
